addons/kyverno/policies/edtech-kr_pipa_guardian_consent_under_14-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: edtech-kr_pipa_guardian_consent_under_14
  annotations:
    rulehub.id: edtech.kr_pipa_guardian_consent_under_14
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: edtech.kr_pipa_guardian_consent_under_14: example validation
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
